--- a/web/css/estiloInfoWindow.css
+++ b/web/css/estiloInfoWindow.css
@@ -16,11 +16,11 @@ body {
 	max-width: none !important;
 }
 .gm-style-iw {
-	width: 350px !important;
-	top: 15px !important;
-	left: 0px !important;
+	width: 363px !important;
+	top: 10px !important;
+	left: 9px !important;
 	background-color: #fff;
-	box-shadow: 0 1px 6px rgba(178, 178, 178, 0.6);
+	box-shadow: 10px 10px 9px rgba(178, 178, 178, 0.6);
 	border: 1px solid rgba(72, 181, 233, 0.6);
 	border-radius: 2px 2px 10px 10px;
 }
@@ -29,9 +29,9 @@ body {
 }
 #iw-container .iw-title {
 	font-family: 'Open Sans Condensed', sans-serif;
-	font-size: 22px;
-	font-weight: 400;
-	padding: 10px;
+	font-size:   21px;
+	font-weight: 600;
+	padding: 8px;
 	background-color: #48b5e9;
 	color: white;
 	margin: 0;
@@ -39,11 +39,11 @@ body {
 }
 #iw-container .iw-content {
 	font-size: 13px;
-	line-height: 18px;
+	line-height: 17px;
 	font-weight: 400;
-	margin-right: 1px;
-	padding: 15px 5px 20px 15px;
-	max-height: 140px;
+	margin-right: 18px;
+	padding: 4px 4px 150px -1px;
+	max-height: 150px;
 	overflow-y: auto;
 	overflow-x: hidden;
 }
@@ -54,7 +54,7 @@ body {
 .iw-subTitle {
 	font-size: 16px;
 	font-weight: 700;
-	padding: 5px 0;
+	padding: 3px 5px;
 }
 .iw-bottom-gradient {
 	position: absolute;
